[gd_scene load_steps=5 format=2]

[ext_resource path="res://pause.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/Pause_Screen.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[node name="pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Pause_Screen" type="Sprite" parent="."]
visible = false
position = Vector2( 1224, 572 )
scale = Vector2( 0.238006, 0.237201 )
texture = ExtResource( 2 )

[node name="continue" type="TouchScreenButton" parent="Pause_Screen"]
position = Vector2( -941.153, -792.575 )
scale = Vector2( 80, 80 )
shape = SubResource( 1 )

[node name="exit" type="TouchScreenButton" parent="Pause_Screen"]
position = Vector2( 1176.44, -725.122 )
scale = Vector2( 60, 80 )
shape = SubResource( 2 )
[connection signal="pressed" from="Pause_Screen/continue" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Pause_Screen/exit" to="." method="_on_TouchScreenButton2_pressed"]
